# AI-NRE-System

./: .gitignore  README.md  env-example  pyproject.toml  requirements.txt  sort-records.sh
input/: Brevid-001-551.txt  Brevid-601-610.txt  Brevid-601-610.txt.backup  Brevid-601-613.txt  Brevid-DN-AI.txt
output/: annotated_output-claude.txt  annotated_output.txt  annotated_output_claude_10R.txt  annotated_output_ollama_10R.txt  metadata_table-claude.txt  metadata_table-gemma12B.txt  metadata_table_claude_10R.txt  metadata_table_ollama_10R.txt
prompt/: prompt-batch.txt  prompt-v0.1.txt  prompt-v0.2.txt  prompt-v0.3.txt  prompt-v0.4.txt  prompt-v0.5.txt  prompt-v0.6.txt  prompt.txt  prompt.txt.backup
src/: config.py  io_utils.py  llm_clients.py  process_medieval_llm.py  processing.py  prompts.py
src/ai_ner_system/: __init__.py  config.py  io_utils.py  llm_clients.py  main.py  processing.py  prompts.py
src/ai_ner_system/config/: __init__.py  exceptions.py  settings.py  validation.py
src/ai_ner_system/io/: __init__.py  csv_reader.py  exceptions.py  output_writers.py
src/ai_ner_system/llm/: __init__.py  base_client.py  batch_models.py  claude_client.py  exceptions.py  factory.py  ollama_client.py
src/ai_ner_system/pipeline/: __init__.py  async_processor.py  main_processor.py  stats.py  sync_processor.py
src/ai_ner_system/processing/: __init__.py  entities.py  exceptions.py  parser.py  processor.py  validator.py
src/ai_ner_system/prompt/: __init__.py  builder.py  exceptions.py
